Bug 313576 - Crash while adding book references
Summary: Crash while adding book references
Status: RESOLVED FIXED
Alias: None
Product: calligrawords
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Calligra Words Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-20 16:24 UTC by Benoit Leffray
Modified: 2013-01-26 03:27 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Benoit Leffray 2013-01-20 16:24:23 UTC
Application: calligrawords (2.6 RC2)
KDE Platform Version: 4.9.97
Qt Version: 4.8.3
Operating System: Linux 3.5.0-22-generic x86_64
Distribution: Ubuntu 12.10

-- Information about the crash:
- What I was doing when the application crashed:
I was adding book references (autor, title, organization, etc.) to a document.

-- Backtrace:
Application: Calligra Words (calligrawords), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fe3470b0780 (LWP 11944))]

Thread 4 (Thread 0x7fe32e1ed700 (LWP 11947)):
#0  0x00007fe34106e05d in __pthread_mutex_unlock_usercnt (mutex=<optimized out>, decr=<optimized out>) at pthread_mutex_unlock.c:52
#1  __pthread_mutex_unlock (mutex=0x1186400) at pthread_mutex_unlock.c:290
#2  0x00007fe340bd8e51 in g_mutex_unlock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fe340b9b672 in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007fe340b9bcab in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007fe340b9c1e2 in g_main_loop_run () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#6  0x00007fe3349444a6 in ?? () from /usr/lib/x86_64-linux-gnu/libgio-2.0.so.0
#7  0x00007fe340bbf645 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#8  0x00007fe34106ae9a in start_thread (arg=0x7fe32e1ed700) at pthread_create.c:308
#9  0x00007fe3469c4cbd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#10 0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7fe318812700 (LWP 11949)):
#0  0x00007fe3469b9303 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007fe340b9bd84 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fe340b9bea4 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fe345067c16 in QEventDispatcherGlib::processEvents (this=0x7fe3140008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#4  0x00007fe3450382bf in QEventLoop::processEvents (this=this@entry=0x7fe318811dd0, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007fe345038548 in QEventLoop::exec (this=0x7fe318811dd0, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007fe344f39b10 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#7  0x00007fe3450189af in QInotifyFileSystemWatcherEngine::run (this=0x17706a0) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007fe344f3caec in QThreadPrivate::start (arg=0x17706a0) at thread/qthread_unix.cpp:338
#9  0x00007fe34106ae9a in start_thread (arg=0x7fe318812700) at pthread_create.c:308
#10 0x00007fe3469c4cbd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7fe313605700 (LWP 11953)):
#0  0x00007fff36fff60c in ?? ()
#1  0x00007fff36fff89c in clock_gettime ()
#2  0x00007fe33e72615d in __GI_clock_gettime (clock_id=<optimized out>, tp=<optimized out>) at ../sysdeps/unix/clock_gettime.c:116
#3  0x00007fe344f929c4 in do_gettime (frac=0x7fe313604b28, sec=0x7fe313604b20) at tools/qelapsedtimer_unix.cpp:123
#4  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#5  0x00007fe34506841d in QTimerInfoList::updateCurrentTime (this=this@entry=0x7fe30c002660) at kernel/qeventdispatcher_unix.cpp:343
#6  0x00007fe345068763 in QTimerInfoList::timerWait (this=0x7fe30c002660, tm=...) at kernel/qeventdispatcher_unix.cpp:450
#7  0x00007fe3450672cc in timerSourcePrepareHelper (src=<optimized out>, timeout=0x7fe313604c14) at kernel/qeventdispatcher_glib.cpp:136
#8  0x00007fe345067375 in timerSourcePrepare (source=<optimized out>, timeout=<optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#9  0x00007fe340b9b618 in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#10 0x00007fe340b9bcab in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#11 0x00007fe340b9bea4 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#12 0x00007fe345067c16 in QEventDispatcherGlib::processEvents (this=0x7fe30c0008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#13 0x00007fe3450382bf in QEventLoop::processEvents (this=this@entry=0x7fe313604dd0, flags=...) at kernel/qeventloop.cpp:149
#14 0x00007fe345038548 in QEventLoop::exec (this=0x7fe313604dd0, flags=...) at kernel/qeventloop.cpp:204
#15 0x00007fe344f39b10 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#16 0x00007fe3450189af in QInotifyFileSystemWatcherEngine::run (this=0x1477430) at io/qfilesystemwatcher_inotify.cpp:248
#17 0x00007fe344f3caec in QThreadPrivate::start (arg=0x1477430) at thread/qthread_unix.cpp:338
#18 0x00007fe34106ae9a in start_thread (arg=0x7fe313605700) at pthread_create.c:308
#19 0x00007fe3469c4cbd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#20 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fe3470b0780 (LWP 11944)):
[KCrash Handler]
#6  QHash (other=..., this=0x7fff36fc4440) at /usr/include/qt4/QtCore/qhash.h:282
#7  QSet (other=..., this=0x7fff36fc4440) at /usr/include/qt4/QtCore/qset.h:60
#8  QForeachContainer (t=..., this=0x7fff36fc4440) at /usr/include/qt4/QtCore/qglobal.h:2367
#9  KoTextRangeManager::textRangesChangingWithin (this=0x0, first=0, last=0, matchFirst=0, matchLast=-1) at /build/buildd/calligra-2.5.93/libs/kotext/KoTextRangeManager.cpp:113
#10 0x00007fe3432ab53e in KoTextWriter::Private::saveParagraph (this=this@entry=0x6cef3f0, block=..., from=from@entry=0, to=to@entry=11) at /build/buildd/calligra-2.5.93/libs/kotext/opendocument/KoTextWriter_p.cpp:757
#11 0x00007fe3432af441 in KoTextWriter::Private::writeBlocks (this=this@entry=0x6cef3f0, document=document@entry=0x157dc10, from=from@entry=0, to=to@entry=11, listStyles=..., currentTable=currentTable@entry=0x0, currentList=currentList@entry=0x0) at /build/buildd/calligra-2.5.93/libs/kotext/opendocument/KoTextWriter_p.cpp:136
#12 0x00007fe3432af8c0 in KoTextWriter::Private::saveBibliography (this=0x6cef3f0, document=<optimized out>, listStyles=..., bib=...) at /build/buildd/calligra-2.5.93/libs/kotext/opendocument/KoTextWriter_p.cpp:1474
#13 0x00007fe3432af23b in KoTextWriter::Private::writeBlocks (this=0x6cef3f0, document=0x53f0950, from=0, to=-1, listStyles=..., currentTable=0x0, currentList=0x0) at /build/buildd/calligra-2.5.93/libs/kotext/opendocument/KoTextWriter_p.cpp:103
#14 0x00007fe3432b4547 in KoTextWriter::write (this=this@entry=0x7fff36fc4dc0, document=document@entry=0x53f0950, from=from@entry=0, to=to@entry=-1) at /build/buildd/calligra-2.5.93/libs/kotext/opendocument/KoTextWriter.cpp:206
#15 0x00007fe3432b49f7 in KoTextWriter::saveOdf (context=..., rdfData=0x14ac0f0, document=0x53f0950, from=0, to=-1) at /build/buildd/calligra-2.5.93/libs/kotext/opendocument/KoTextWriter.cpp:80
#16 0x00007fe31fbaa118 in KWOdfWriter::save (this=0x7fff36fc50b0, odfStore=..., embeddedSaver=...) at /build/buildd/calligra-2.5.93/words/part/KWOdfWriter.cpp:304
#17 0x00007fe31fb85af2 in KWDocument::saveOdf (this=<optimized out>, documentContext=...) at /build/buildd/calligra-2.5.93/words/part/KWDocument.cpp:732
#18 0x00007fe346584f5a in KoDocument::saveNativeFormatODF (this=this@entry=0x14ad960, store=store@entry=0x60464c0, mimeType=...) at /build/buildd/calligra-2.5.93/libs/main/KoDocument.cpp:618
#19 0x00007fe346585dc3 in KoDocument::saveNativeFormat (this=this@entry=0x14ad960, file=...) at /build/buildd/calligra-2.5.93/libs/main/KoDocument.cpp:602
#20 0x00007fe34657e473 in KoDocument::slotAutoSave (this=0x14ad960) at /build/buildd/calligra-2.5.93/libs/main/KoDocument.cpp:484
#21 0x00007fe34657e6b5 in KoDocument::qt_static_metacall (_o=0x7fff36fc4550, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0x0) at /build/buildd/calligra-2.5.93/obj-x86_64-linux-gnu/libs/main/KoDocument.moc:97
#22 0x00007fe34504ef5f in QMetaObject::activate (sender=0x14a3cd0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3547
#23 0x00007fe34504e26c in QObject::event (this=0x14a3cd0, e=<optimized out>) at kernel/qobject.cpp:1157
#24 0x00007fe345a1be9c in QApplicationPrivate::notify_helper (this=this@entry=0x10baeb0, receiver=receiver@entry=0x14a3cd0, e=e@entry=0x7fff36fc5c30) at kernel/qapplication.cpp:4562
#25 0x00007fe345a2030a in QApplication::notify (this=0x7fff36fc5f40, receiver=0x14a3cd0, e=0x7fff36fc5c30) at kernel/qapplication.cpp:4423
#26 0x00007fe34656eaf8 in KoApplication::notify (this=<optimized out>, receiver=0x14a3cd0, event=0x7fff36fc5c30) at /build/buildd/calligra-2.5.93/libs/main/KoApplication.cpp:504
#27 0x00007fe34503956e in QCoreApplication::notifyInternal (this=0x7fff36fc5f40, receiver=0x14a3cd0, event=0x7fff36fc5c30) at kernel/qcoreapplication.cpp:915
#28 0x00007fe34506a462 in sendEvent (event=0x7fff36fc5c30, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#29 QTimerInfoList::activateTimers (this=0x10bc550) at kernel/qeventdispatcher_unix.cpp:611
#30 0x00007fe345067584 in timerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:186
#31 timerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:180
#32 0x00007fe3450675a1 in idleTimerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:233
#33 0x00007fe340b9bab5 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#34 0x00007fe340b9bde8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#35 0x00007fe340b9bea4 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#36 0x00007fe345067bf6 in QEventDispatcherGlib::processEvents (this=0x10b7720, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#37 0x00007fe345ac0c1e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#38 0x00007fe3450382bf in QEventLoop::processEvents (this=this@entry=0x7fff36fc5eb0, flags=...) at kernel/qeventloop.cpp:149
#39 0x00007fe345038548 in QEventLoop::exec (this=0x7fff36fc5eb0, flags=...) at kernel/qeventloop.cpp:204
#40 0x00007fe34503d708 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1187
#41 0x00007fe346cb2bc5 in kdemain (argc=<optimized out>, argv=0x7fff36fc6058) at /build/buildd/calligra-2.5.93/words/part/main.cpp:43
#42 0x00007fe3468f276d in __libc_start_main (main=0x4006a0 <main(int, char**)>, argc=1, ubp_av=0x7fff36fc6058, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fff36fc6048) at libc-start.c:226
#43 0x00000000004006d1 in _start ()

This bug may be a duplicate of or related to bug 311569.

Possible duplicates by query: bug 311569.

Reported using DrKonqi
Comment 1 Camilla Boemann 2013-01-20 17:02:10 UTC
thanks,  it's sort of a duplicate of another bug we fixed already, so it should be easy to fix
Comment 2 Camilla Boemann 2013-01-20 19:45:21 UTC
Git commit e2baa85e4fb1fc751741807628aef952904211ff by C. Boemann.
Committed on 20/01/2013 at 20:44.
Pushed by boemann into branch 'master'.

Bibliography should also havea textrangemanger

M  +3    -0    libs/kotext/KoTextEditor.cpp
M  +1    -0    libs/kotext/opendocument/KoTextLoader.cpp

http://commits.kde.org/calligra/e2baa85e4fb1fc751741807628aef952904211ff
Comment 3 Camilla Boemann 2013-01-20 19:54:34 UTC
Git commit afbf0d9ed4f815365cd7c777ee63b4e9fdd19b04 by C. Boemann.
Committed on 20/01/2013 at 20:44.
Pushed by boemann into branch 'calligra/2.6'.

Bibliography should also havea textrangemanger

M  +3    -0    libs/kotext/KoTextEditor.cpp
M  +1    -0    libs/kotext/opendocument/KoTextLoader.cpp

http://commits.kde.org/calligra/afbf0d9ed4f815365cd7c777ee63b4e9fdd19b04
Comment 4 Gopalakrishna Bhat 2013-01-21 16:16:15 UTC
Git commit 3f354e094bc8e444944eb31b4a9897a22778acdf by Gopalakrishna Bhat A.
Committed on 21/01/2013 at 16:49.
Pushed by gopalakrishnabhat into branch 'master'.

Fix a crash in Auto Recover of files. Use the doc of the part being used.
REVIEW: 108509

M  +1    -0    libs/main/KoApplication.cpp

http://commits.kde.org/calligra/3f354e094bc8e444944eb31b4a9897a22778acdf
Comment 5 Gopalakrishna Bhat 2013-01-21 16:21:22 UTC
(In reply to comment #4)
> Git commit 3f354e094bc8e444944eb31b4a9897a22778acdf by Gopalakrishna Bhat A.
> Committed on 21/01/2013 at 16:49.
> Pushed by gopalakrishnabhat into branch 'master'.
> 
> Fix a crash in Auto Recover of files. Use the doc of the part being used.
> REVIEW: 108509
> 
> M  +1    -0    libs/main/KoApplication.cpp
> 
> http://commits.kde.org/calligra/3f354e094bc8e444944eb31b4a9897a22778acdf

Sorry, Wrong bug
Comment 6 Gopalakrishna Bhat 2013-01-26 03:27:06 UTC
Git commit 1b9153047e6f3ca0d1d1ae63e62ce6e7fd723a90 by Gopalakrishna Bhat A.
Committed on 21/01/2013 at 16:49.
Pushed by gopalakrishnabhat into branch 'calligra/2.6'.

Fix a crash in Auto Recover of files. Use the doc of the part being used.
REVIEW: 108509
(cherry picked from commit 3f354e094bc8e444944eb31b4a9897a22778acdf)

M  +1    -0    libs/main/KoApplication.cpp

http://commits.kde.org/calligra/1b9153047e6f3ca0d1d1ae63e62ce6e7fd723a90