Bibliography should also havea textrangemanger

BUG:313576