libs/kotext/opendocument/KoTextLoader.cpp
@@ -2679,6 +2679,7 @@ void KoTextLoader::loadBibliography(const KoXmlElement &element, QTextCursor &cu
 
     QTextDocument *bibDocument = new QTextDocument();
     KoTextDocument(bibDocument).setStyleManager(d->styleManager);
+    KoTextDocument(bibDocument).setTextRangeManager(new KoTextRangeManager);
 
     info->m_name = element.attribute("name");
     info->m_styleName = element.attribute("style-name");
